--- a/accenture.html
+++ b/accenture.html
@@ -171,13 +171,15 @@ const canvas = document.getElementById('particles');
 const ctx = canvas.getContext('2d');
 canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
+
 let particlesArray = [];
-const numberOfParticles = 70;
+let numberOfParticles = getParticleCount(); // responsive count
+
 class Particle {
   constructor(x, y) {
     this.x = x;
     this.y = y;
-    this.size = 2;
+    this.size = (window.innerWidth < 480) ? 1.5 : 2; // smaller on phone
     this.speedX = (Math.random() - 0.5) * 1;
     this.speedY = (Math.random() - 0.5) * 1;
   }
@@ -194,22 +196,33 @@ class Particle {
     ctx.fill();
   }
 }
+
+// Adjust number of particles by screen size
+function getParticleCount() {
+  if (window.innerWidth < 480) return 30;    // fewer on small phones
+  if (window.innerWidth < 768) return 50;    // tablets
+  return 70; // desktops
+}
+
 function init() {
   particlesArray = [];
+  numberOfParticles = getParticleCount();
   for (let i = 0; i < numberOfParticles; i++) {
     let x = Math.random() * canvas.width;
     let y = Math.random() * canvas.height;
     particlesArray.push(new Particle(x, y));
   }
 }
+
 function connect() {
+  let maxDist = (window.innerWidth < 480) ? 90 : 140; // reduce link distance on small screens
   for (let a = 0; a < particlesArray.length; a++) {
     for (let b = a; b < particlesArray.length; b++) {
       let dx = particlesArray[a].x - particlesArray[b].x;
       let dy = particlesArray[a].y - particlesArray[b].y;
       let distance = Math.sqrt(dx * dx + dy * dy);
-      if (distance < 140) {
-        let opacity = 1 - distance / 140;
+      if (distance < maxDist) {
+        let opacity = 1 - distance / maxDist;
         ctx.strokeStyle = `rgba(30,144,255,${opacity})`;
         ctx.lineWidth = 1;
         ctx.beginPath();
@@ -220,19 +233,23 @@ function connect() {
     }
   }
 }
+
 function animate() {
   ctx.clearRect(0, 0, canvas.width, canvas.height);
   particlesArray.forEach(p => { p.update(); p.draw(); });
   connect();
   requestAnimationFrame(animate);
 }
+
 init();
 animate();
+
 window.addEventListener('resize', () => {
   canvas.width = window.innerWidth;
   canvas.height = window.innerHeight;
   init();
 });
+
 // Click -> activate blue glow
 document.querySelectorAll('.stage').forEach(stage => {
   stage.addEventListener('click', () => {
@@ -241,5 +258,4 @@ document.querySelectorAll('.stage').forEach(stage => {
   });
 });
 </script>
-</body>
-</html>
+
