--- a/accenture.html
+++ b/accenture.html
@@ -96,13 +96,15 @@ main h1 {
   gap: 2rem;
   align-items: center;
   margin-top: 2rem;
+  width: 100%;
 }
 /* Stage Box */
 .stage {
   width: 320px;
+  max-width: 90%; /* responsive */
   padding: 1.4rem 1.6rem;
   border-radius: 16px;
-  background: var(--card-bg);
+  background: linear-gradient(145deg, #1a2238, #111827);
   border: 2px solid rgba(255,255,255,0.08);
   display: flex;
   align-items: center;
@@ -110,17 +112,18 @@ main h1 {
   font-weight: 600;
   font-size: 1.35rem;
   color: var(--text-light);
-  box-shadow: 0 0 0 transparent;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
   transition: transform 0.3s ease, box-shadow 0.4s ease, border 0.4s ease;
   cursor: pointer;
+  text-align: center;
 }
-/* Hover = outside glow only */
+/* Hover glow */
 .stage:hover {
   transform: translateY(-6px);
   border: 2px solid var(--primary);
   box-shadow: 0 0 25px rgba(30,144,255,0.7), 0 0 45px rgba(30,144,255,0.4);
 }
-/* Active = stronger outer glow */
+/* Active glow */
 .stage.active {
   border: 2px solid var(--primary);
   box-shadow: 0 0 30px rgba(30,144,255,0.9), 0 0 60px rgba(30,144,255,0.5);
@@ -128,19 +131,19 @@ main h1 {
 /* Responsive */
 @media(max-width:992px){
   main h1 { font-size:2rem; }
-  .stage { width:280px; font-size:1.2rem; padding:1.3rem; }
+  .stage { font-size:1.2rem; padding:1.3rem; width:80%; }
 }
 @media(max-width:768px){
   nav ul { display:none; }
   main h1 { font-size:1.7rem; }
-  .stage { width:240px; font-size:1.1rem; padding:1.2rem; }
+  .stage { font-size:1.1rem; padding:1.2rem; width:100%; }
 }
 @media(max-width:480px){
   main h1 { font-size:1.5rem; }
-  .stage { width:200px; font-size:1rem; padding:1rem; }
+  .stage { font-size:1rem; padding:1.1rem; width:100%; }
 }
 @media(max-width:360px){
-  .stage { width:180px; font-size:0.95rem; padding:0.9rem; }
+  .stage { font-size:0.95rem; padding:0.9rem; width:100%; }
 }
 </style>
 </head>
@@ -159,10 +162,10 @@ main h1 {
 <main>
   <h1>Accenture Hiring Process on Campus</h1>
   <div class="stage-list">
-    <div class="stage">Cognitive Ability</div>
-    <div class="stage">Technical Assessment</div>
-    <div class="stage">Coding Round</div>
-    <div class="stage">Interview Round</div>
+    <div class="stage">🎯 Cognitive Ability</div>
+    <div class="stage">💻 Technical Assessment</div>
+    <div class="stage">👨‍💻 Coding Round</div>
+    <div class="stage">🗣️ Interview Round</div>
   </div>
 </main>
 <script>
@@ -173,13 +176,13 @@ canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
 
 let particlesArray = [];
-let numberOfParticles = getParticleCount(); // responsive count
+let numberOfParticles = getParticleCount();
 
 class Particle {
   constructor(x, y) {
     this.x = x;
     this.y = y;
-    this.size = (window.innerWidth < 480) ? 1.5 : 2; // smaller on phone
+    this.size = (window.innerWidth < 480) ? 1.5 : 2; // smaller on phones
     this.speedX = (Math.random() - 0.5) * 1;
     this.speedY = (Math.random() - 0.5) * 1;
   }
@@ -197,10 +200,9 @@ class Particle {
   }
 }
 
-// Adjust number of particles by screen size
 function getParticleCount() {
-  if (window.innerWidth < 480) return 30;    // fewer on small phones
-  if (window.innerWidth < 768) return 50;    // tablets
+  if (window.innerWidth < 480) return 30;   // small phones
+  if (window.innerWidth < 768) return 50;   // tablets
   return 70; // desktops
 }
 
@@ -215,7 +217,7 @@ function init() {
 }
 
 function connect() {
-  let maxDist = (window.innerWidth < 480) ? 90 : 140; // reduce link distance on small screens
+  let maxDist = (window.innerWidth < 480) ? 90 : 140;
   for (let a = 0; a < particlesArray.length; a++) {
     for (let b = a; b < particlesArray.length; b++) {
       let dx = particlesArray[a].x - particlesArray[b].x;
@@ -250,7 +252,7 @@ window.addEventListener('resize', () => {
   init();
 });
 
-// Click -> activate blue glow
+// Click -> activate glow
 document.querySelectorAll('.stage').forEach(stage => {
   stage.addEventListener('click', () => {
     document.querySelectorAll('.stage').forEach(s => s.classList.remove('active'));
@@ -258,4 +260,5 @@ document.querySelectorAll('.stage').forEach(stage => {
   });
 });
 </script>
-
+</body>
+</html>
