--- a/accenture.html
+++ b/accenture.html
@@ -11,8 +11,9 @@
   --primary: #1e90ff;
   --bg-dark: #0f172a;
   --bg-light: #1e293b;
-  --card-bg: #111827;
+  --card-bg: #ffffff; /* white box */
   --text-light: #fff;
+  --text-dark: #111;
 }
 /* Reset */
 * { margin:0; padding:0; box-sizing:border-box; font-family:'Roboto',sans-serif; }
@@ -104,15 +105,15 @@ main h1 {
   max-width: 90%; /* responsive */
   padding: 1.4rem 1.6rem;
   border-radius: 16px;
-  background: linear-gradient(145deg, #1a2238, #111827);
-  border: 2px solid rgba(255,255,255,0.08);
+  background: var(--card-bg); /* white */
+  border: 2px solid rgba(0,0,0,0.08);
   display: flex;
   align-items: center;
   justify-content: center;
   font-weight: 600;
   font-size: 1.35rem;
-  color: var(--text-light);
-  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+  color: var(--text-dark); /* black text */
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
   transition: transform 0.3s ease, box-shadow 0.4s ease, border 0.4s ease;
   cursor: pointer;
   text-align: center;
@@ -121,12 +122,12 @@ main h1 {
 .stage:hover {
   transform: translateY(-6px);
   border: 2px solid var(--primary);
-  box-shadow: 0 0 25px rgba(30,144,255,0.7), 0 0 45px rgba(30,144,255,0.4);
+  box-shadow: 0 0 25px rgba(30,144,255,0.6), 0 0 45px rgba(30,144,255,0.3);
 }
 /* Active glow */
 .stage.active {
   border: 2px solid var(--primary);
-  box-shadow: 0 0 30px rgba(30,144,255,0.9), 0 0 60px rgba(30,144,255,0.5);
+  box-shadow: 0 0 30px rgba(30,144,255,0.8), 0 0 60px rgba(30,144,255,0.4);
 }
 /* Responsive */
 @media(max-width:992px){
