--- a/l&t.html
+++ b/l&t.html
@@ -11,11 +11,12 @@
   --primary: #1e90ff;
   --bg-dark: #0f172a;
   --bg-light: #1e293b;
-  --card-bg: #111827;
   --text-light: #fff;
 }
+
 /* Reset */
 * { margin:0; padding:0; box-sizing:border-box; font-family:'Roboto',sans-serif; }
+
 /* Body */
 body {
   min-height: 100vh;
@@ -27,6 +28,7 @@ body {
   flex-direction: column;
   align-items: center;
 }
+
 /* Particle Canvas */
 #particles {
   position: fixed;
@@ -34,6 +36,7 @@ body {
   width:100%; height:100%;
   z-index: -1;
 }
+
 /* Navbar */
 nav {
   width: 100%;
@@ -49,6 +52,7 @@ nav {
   z-index: 10;
   border-bottom: 1px solid rgba(255,255,255,0.1);
 }
+
 nav .logo {
   font-size: 1.5rem;
   font-weight: 700;
@@ -57,20 +61,22 @@ nav .logo {
   align-items: center;
   gap: 0.5rem;
 }
+
 nav ul {
   list-style: none;
   display: flex;
   gap: 2rem;
 }
+
 nav ul li a {
   text-decoration: none;
   color: var(--text-light);
   font-weight: 500;
   transition: color 0.3s;
 }
-nav ul li a:hover {
-  color: var(--primary);
-}
+
+nav ul li a:hover { color: var(--primary); }
+
 /* Main Content */
 main {
   max-width: 1200px;
@@ -82,6 +88,7 @@ main {
   gap: 2rem;
   text-align: center;
 }
+
 main h1 {
   font-size: 2.4rem;
   font-weight: 700;
@@ -89,6 +96,7 @@ main h1 {
   text-shadow: 0 0 8px rgba(30,144,255,0.6);
   letter-spacing: 2px;
 }
+
 /* Stage List */
 .stage-list {
   display: flex;
@@ -97,34 +105,39 @@ main h1 {
   align-items: center;
   margin-top: 2rem;
 }
+
 /* Stage Box */
 .stage {
   width: 320px;
   padding: 1.4rem 1.6rem;
   border-radius: 16px;
-  background: var(--card-bg);
-  border: 2px solid rgba(255,255,255,0.08);
+  background: #ffffff; /* white card */
+  border: 2px solid rgba(0,0,0,0.08);
   display: flex;
   align-items: center;
   justify-content: center;
   font-weight: 600;
   font-size: 1.35rem;
-  color: var(--text-light);
-  box-shadow: 0 0 0 transparent;
+  color: #000000; /* black text */
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
   transition: transform 0.3s ease, box-shadow 0.4s ease, border 0.4s ease;
   cursor: pointer;
+  text-align: center;
 }
+
 /* Hover = outside glow only */
 .stage:hover {
   transform: translateY(-6px);
   border: 2px solid var(--primary);
   box-shadow: 0 0 25px rgba(30,144,255,0.7), 0 0 45px rgba(30,144,255,0.4);
 }
+
 /* Active = stronger outer glow */
 .stage.active {
   border: 2px solid var(--primary);
   box-shadow: 0 0 30px rgba(30,144,255,0.9), 0 0 60px rgba(30,144,255,0.5);
 }
+
 /* Responsive */
 @media(max-width:768px){
   nav ul { display:none; }
@@ -138,6 +151,7 @@ main h1 {
 </head>
 <body>
 <canvas id="particles"></canvas>
+
 <!-- Navbar -->
 <nav>
   <div class="logo">🎓 Campus Hire</div>
@@ -147,9 +161,10 @@ main h1 {
     <li><a href="#"><i class="fas fa-phone"></i> Contact</a></li>
   </ul>
 </nav>
+
 <!-- Main -->
 <main>
-  <h1>L & T infotech Hiring Process on Campus</h1>
+  <h1>L & T Infotech Hiring Process on Campus</h1>
   <div class="stage-list">
     <div class="stage">Cognitive Round</div>
     <div class="stage">Communication Round</div>
@@ -157,14 +172,17 @@ main h1 {
     <div class="stage">Interview Round</div>
   </div>
 </main>
+
 <script>
 // Particle Network Effect
 const canvas = document.getElementById('particles');
 const ctx = canvas.getContext('2d');
 canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
+
 let particlesArray = [];
 const numberOfParticles = 70;
+
 class Particle {
   constructor(x, y) {
     this.x = x;
@@ -186,6 +204,7 @@ class Particle {
     ctx.fill();
   }
 }
+
 function init() {
   particlesArray = [];
   for (let i = 0; i < numberOfParticles; i++) {
@@ -194,6 +213,7 @@ function init() {
     particlesArray.push(new Particle(x, y));
   }
 }
+
 function connect() {
   for (let a = 0; a < particlesArray.length; a++) {
     for (let b = a; b < particlesArray.length; b++) {
@@ -212,19 +232,23 @@ function connect() {
     }
   }
 }
+
 function animate() {
   ctx.clearRect(0, 0, canvas.width, canvas.height);
   particlesArray.forEach(p => { p.update(); p.draw(); });
   connect();
   requestAnimationFrame(animate);
 }
+
 init();
 animate();
+
 window.addEventListener('resize', () => {
   canvas.width = window.innerWidth;
   canvas.height = window.innerHeight;
   init();
 });
+
 // Click -> activate blue glow
 document.querySelectorAll('.stage').forEach(stage => {
   stage.addEventListener('click', () => {
