--- a/tcs.html
+++ b/tcs.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Campus Placement Dashboard</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <style>
 :root {
   --primary: #1e90ff;
   --bg-dark: #0f172a;
   --bg-light: #1e293b;
-  --card-bg: #111827;
   --text-light: #fff;
 }
 
+/* Reset */
 * { margin:0; padding:0; box-sizing:border-box; font-family:'Roboto',sans-serif; }
 
 /* Body */
@@ -72,9 +72,7 @@ nav ul li a {
   transition: color 0.3s;
 }
 
-nav ul li a:hover {
-  color: var(--primary);
-}
+nav ul li a:hover { color: var(--primary); }
 
 /* Main Content */
 main {
@@ -99,44 +97,48 @@ main h1 {
 .stage-list {
   display: flex;
   flex-direction: column;
-  gap: 1.75rem; /* reduced by ~10% */
+  gap: 1.75rem;
   align-items: center;
   margin-top: 2rem;
 }
 
+/* Stage Box */
 .stage {
-  width: 340px;       /* increased width (~30%) */
-  padding: 1.5rem;    /* increased padding (~30%) */
+  width: 340px;
+  padding: 1.5rem;
   border-radius: 14px;
-  background: var(--card-bg);
-  border: 2px solid transparent;
+  background: #ffffff; /* white background */
+  color: #000000;      /* black text */
+  border: 2px solid rgba(0,0,0,0.08);
   display: flex;
   align-items: center;
   justify-content: center;
   font-weight: 700;
-  font-size: 1.4rem;   /* larger text */
-  color: var(--text-light);
-  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+  font-size: 1.4rem;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
   transition: transform 0.3s, box-shadow 0.3s, border-color 0.3s;
   cursor: pointer;
+  text-align: center;
 }
 
+/* Hover = outside glow */
 .stage:hover {
   transform: translateY(-5px);
-  border-color: var(--primary);
+  border: 2px solid var(--primary);
   box-shadow: 0 0 20px var(--primary);
 }
 
+/* Active = stronger glow */
 .stage.active {
-  border-color: var(--primary);
-  box-shadow: 0 0 22px var(--primary);
+  border: 2px solid var(--primary);
+  box-shadow: 0 0 25px var(--primary);
 }
 
 /* Responsive */
 @media(max-width:768px){
   nav ul { display:none; }
   main h1 { font-size:1.7rem; }
-  .stage { width:250px; font-size:1.1rem; padding:1.2rem; }
+  .stage { width:260px; font-size:1.1rem; padding:1.2rem; }
 }
 
 @media(max-width:480px){
@@ -151,11 +153,11 @@ main h1 {
 <!-- Navbar -->
 <nav>
   <div class="logo">🎓 Campus Hire</div>
-<ul>
-  <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
-  <li><a href="#"><i class="fas fa-info-circle"></i> About</a></li>
-  <li><a href="#"><i class="fas fa-phone"></i> Contact</a></li>
-</ul>
+  <ul>
+    <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
+    <li><a href="#"><i class="fas fa-info-circle"></i> About</a></li>
+    <li><a href="#"><i class="fas fa-phone"></i> Contact</a></li>
+  </ul>
 </nav>
 
 <!-- Main -->
@@ -164,7 +166,7 @@ main h1 {
   <div class="stage-list">
     <div class="stage">Written / Aptitude Test</div>
     <div class="stage">Technical Interview</div>
-    <div class="stage">Managerial / (sometimes) intermediate interview</div>
+    <div class="stage">Managerial / (sometimes) Intermediate Interview</div>
     <div class="stage">HR Interview</div>
   </div>
 </main>
