--- a/techmahindra.html
+++ b/techmahindra.html
@@ -11,7 +11,6 @@
   --primary: #1e90ff;
   --bg-dark: #0f172a;
   --bg-light: #1e293b;
-  --card-bg: #111827;
   --text-light: #fff;
 }
 
@@ -108,28 +107,31 @@ main h1 {
   width: 340px;
   padding: 1.5rem;
   border-radius: 14px;
-  background: var(--card-bg);
-  border: 2px solid transparent;
+  background: #ffffff; /* white background */
+  color: #000000;      /* black text */
+  border: 2px solid rgba(0,0,0,0.08);
   display: flex;
   align-items: center;
   justify-content: center;
   font-weight: 700;
   font-size: 1.4rem;
-  color: var(--text-light);
-  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
   transition: transform 0.3s, box-shadow 0.3s, border-color 0.3s;
   cursor: pointer;
+  text-align: center;
 }
 
+/* Hover */
 .stage:hover {
   transform: translateY(-5px);
-  border-color: var(--primary);
+  border: 2px solid var(--primary);
   box-shadow: 0 0 20px var(--primary);
 }
 
+/* Active */
 .stage.active {
-  border-color: var(--primary);
-  box-shadow: 0 0 22px var(--primary);
+  border: 2px solid var(--primary);
+  box-shadow: 0 0 25px var(--primary);
 }
 
 /* Responsive for tablets */
@@ -177,7 +179,7 @@ main h1 {
 
 <!-- Main -->
 <main>
-  <h1>Teach-Mahindra Hiring Process on Campus</h1>
+  <h1>Tech-Mahindra Hiring Process on Campus</h1>
   <div class="stage-list">
     <div class="stage">Written Test</div>
     <div class="stage">Psychometric Test</div>
